# ai-essay-detector

./: .gitignore  HANDOFF.md  README.md  pyproject.toml  requirements.txt  run.sh  vercel.json
api/: index.py
backend/: essay_detector.db  requirements.txt
backend/app/: ai_analysis.py  config.py  main.py
backend/app/database/: crud.py  models.py
backend/app/detection/: analyzer.py  preprocessor.py  report.py  scoring.py
backend/app/detection/features/: citation_analysis.py  lexical_diversity.py  personal_voice.py  readability.py  repetition.py  semantic_similarity.py  sentence_variation.py  specificity.py  structure.py  transitions.py
backend/app/parsers/: document_parser.py
backend/app/schemas/: schemas.py
backend/data/sample_essays/: ai_sample.txt  human_sample.txt  mixed_sample.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: CategoryBreakdown.jsx  ColdStartGuard.jsx  Dashboard.jsx  ErrorBoundary.jsx  HighlightedText.jsx  HistoryPanel.jsx  InputPanel.jsx  ReportExport.jsx  ResultsPanel.jsx  ScoreGauge.jsx
frontend/src/styles/: globals.css
frontend/src/utils/: api.js
