[project]
name = "ai-essay-detector"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.12",
    "sqlalchemy>=2.0.0",
    "python-docx>=1.1.0",
    "pdfplumber>=0.11.0",
    "nltk>=3.9.0",
    "textstat>=0.7.0",
    "reportlab>=4.2.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "mangum>=0.17.0",
    "numpy>=1.26.0",
]
